kustomize/templates/hostPathPV/patch-ingress.yml
apiVersion: networking.k8s.io/v1  
kind: Ingress  
metadata:  
  name: insource-ingress  
  namespace: insource
spec:  
  rules:  
  - host: insource.local  
    http:  
      paths:  
      - backend:  
          service:  
            name: insource-api  
            port:  
              number: 80  
        path: /<insource-ingress-root-path>/api(/|$)(.*)  
        pathType: ImplementationSpecific  
  - host: insource.local  
    http:  
      paths:  
      - backend:  
          service:  
            name: admin-api  
            port:  
              number: 80  
        path: /<insource-ingress-root-path>/admin-api(/|$)(.*)  
        pathType: ImplementationSpecific
